--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -411,7 +411,7 @@
     <a href="" target="_blank">UIC</a>
     |
 <!-- data mining - B-->     
-    <a href="http://18.133.154.107/" target="_blank">ICDM</a>
+    <a href="https://icdm2024.org/" target="_blank">ICDM</a>
     |
     <a href="https://www.cikm2024.org/" target="_blank">CIKM</a>
     |
@@ -531,7 +531,7 @@
     |
     <a href="https://ickg.zhonghuapu.com/" target="_blank">ICKG</a>
     | 
-    <a href="" target="_blank">IJCKG</a>
+    <a href="https://www.asianlp.sg/conferences/ialp2024/web/" target="_blank">IALP</a>
     | 
     <a href="https://mp.weixin.qq.com/s/qq2Yj2SgCm1TSDTPw21ybA" target="_blank">今日最热AI论文Top5：AI智能体对齐、开放域问答系统、DebugBench、谈判游戏、联邦学习</a>
     | 
@@ -552,7 +552,10 @@
     <a href="https://mp.weixin.qq.com/s/Xe7K6Fbx5e6e-focnuqbQA" target="_blank">哈工大SCIR 12篇长文被COLING 2024录用</a>
     |
     <a href="https://mp.weixin.qq.com/s/ahaPeR4MEKpxcOjtzgKVtg" target="_blank">软件工程顶会——ICSE '24 论文清单、摘要</a>
-    |  
+    | 
+    <a href="https://mp.weixin.qq.com/s/jv4D3ck2ccPqGqLhDRyRsA" target="_blank">中国科学院计算所网络数据重点实验室4篇论文获LREC-COLING 2024录用</a>
+    |
+     
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -3136,6 +3139,61 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/AY80RJmVFyFee0FFA5U7Yg" target="_blank">性能强，成本低，运行快！最强开源大模型出现，超越ChatGPT和Llama！</a>
     |
+    <!-- 2024.04.01 --> 
+    <a href="https://mp.weixin.qq.com/s/wOJ4WF2KQorhOgFeeweydQ?poc_token=HNuCCmajGC11UkonDZ3tR2buQkIlF5sZBM4oMCkU" target="_blank">一眼假！GPT4V可有效识别DeepFake图像！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jJ5hItGNz91TiaDrdfYwUg" target="_blank">今日arXiv最热NLP大模型论文：Github万星！北航发布零代码大模型微调平台LlamaFactory</a>
+    |
+    <!-- 2024.04.02 --> 
+    <a href="https://mp.weixin.qq.com/s/3R8VlGvMXdVF4YK9wXEn4g" target="_blank">华盛顿大学撰文反驳微软，我们无法删除大模型关于哈利波特的记忆</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kkSJsNTyiGQAvnE2OaCwxQ" target="_blank">今日arXiv最热NLP大模型论文：浙大发布歌曲合成工具Prompt-Singer，歌手性别风格均可控！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jiTOy2v7xWOjlgEZAW_sHg" target="_blank">今天起，ChatGPT无需注册就能用了！</a>
+    |
+    <!-- 2024.04.03 --> 
+    <a href="https://mp.weixin.qq.com/s/J0ZwsBve8Y1rYVXXmHI4ug" target="_blank">OpenAI 15秒重建逼真人声，百度早就实现啦！只需2秒生成完美音色，免费使用</a>
+    |
+    <a href="https://mp" target="_blank">华盛顿大学撰</a>
+    |
+    <!-- 2024.04.04 --> 
+    <a href="https://mp.weixin.qq.com/s/Qj9nKUN7p_egY1qBrZlHXw" target="_blank">突破！AI机器人拥有嗅觉！仿生嗅觉芯片研究登上Nature子刊</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WDKMXOQjpWcmEM7dfX0lkQ" target="_blank">弱智吧竟成最佳中文AI训练数据？！中科院等：8项测试第一，远超知乎豆瓣小红书</a>
+    |
+    <!-- 2024.04.05 --> 
+    <a href="https://mp.weixin.qq.com/s/Qj9nKUN7p_egY1qBrZlHXw" target="_blank">今日arXiv最热大模型论文：从Twitter动态预测论文学术不端，人大发布</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/JYOIC2yi47FC86nwjRf1JQ" target="_blank">中文大模型隐私保护哪家强？InternLM 与 Baichuan2 胜出！</a>
+    |
+    <!-- 2024.04.07 --> 
+    <a href="https://mp.weixin.qq.com/s/yN6hzZzxg-huhwAHY0qjMA" target="_blank">量子计算获重大突破！微软和Quantinuum将量子计算错误率降低800倍，网友：AI算力的希望</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WAkBn4AsPUhJDqjzVVmoUw" target="_blank">ChatGPT 8大新功能更新！Sam Altman与前苹果设计总监的AI硬件公司正式开始融资！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eakZrMDgaI8wJbJvugMXbw" target="_blank">中科大发布Agent-FLAN，微调提升Agent能力</a>
+    |
+    <!-- 2024.04.08 --> 
+    <a href="https://mp.weixin.qq.com/s/OsYxoK1lq6Z_sUptyaIANQ" target="_blank">Scaling Laws 又失灵了？谷歌新研究：扩散模型不是越大越好</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/p6cXCvB0p2aZJoidThitDQ" target="_blank">今日arXiv最热大模型论文：人民大学发布，拯救打工人！Office真实场景下的大模型表格处理</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-1T_ovu0u7aF-JWq_jipFw" target="_blank">人民大学：揭示大语言模型事实召回的关键机制</a>
+    |
+    <!-- 2024.04.09 --> 
+    <a href="https://mp.weixin.qq.com/s/LRTjjB_l_e93RLWw1jd6iQ" target="_blank">iPhone上最强模型出现！性能超越GPT-4，Siri有救啦？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/50sZ01lj3YyqfZO1YZBgOA" target="_blank">中科院发布大模型想象增强法IAG，无需外部资源，想想就能变强</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/N1npE8zag6uqhygKIJlp_Q" target="_blank">116 个 AI 大模型：通过国家备案</a>
+    |
+    <!-- 2024.04.10 --> 
+    <a href="https://mp.weixin.qq.com/s/2pL4YSGdC-pfkXn6RQGYrw" target="_blank">Google 发布 CodeGemma：7B 力压 CodeLLaMa-13B</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kS3BufC2_KBzxQ7_ZkPAvQ" target="_blank">黑科技 ！AI届的“指环王”，已接入ChatGPT和Gemini！一个戒指可操控手机和智能家居，韩国公司研发</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/CGQEuagTDoFHKGDyvens9Q" target="_blank">今日arXiv最热大模型论文：Dataverse，针对大模型的开源ETL工具，数据清洗不再难！</a>
+    |   
 </br>
 </br>
 AI论文: 
