--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -168,6 +168,9 @@
     <li><strong><font color="#874e26"><a href="https://arxiv.org/pdf/2403.00795.pdf">Executing Natural Language-Described Algorithms with Large Language Models: An Investigation</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://mp.weixin.qq.com/s/3CMEGk5QhOWwJrv7roXvJw">《大语言模型》</a></font></strong></li>
+
+
     <li><strong><font color="#874e26"><a href="https://github.com/shengyp/book_recommender">Book Recommendation</a></font></strong></li>
 </ul>
 
@@ -3193,7 +3196,29 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/kS3BufC2_KBzxQ7_ZkPAvQ" target="_blank">黑科技 ！AI届的“指环王”，已接入ChatGPT和Gemini！一个戒指可操控手机和智能家居，韩国公司研发</a>
     |
     <a href="https://mp.weixin.qq.com/s/CGQEuagTDoFHKGDyvens9Q" target="_blank">今日arXiv最热大模型论文：Dataverse，针对大模型的开源ETL工具，数据清洗不再难！</a>
-    |   
+    | 
+    <!-- 2024.04.11 --> 
+    <a href="https://mp.weixin.qq.com/s/d4UiF7DMGz_5KdKBn4Bt5A" target="_blank">2023图灵奖得主揭晓！史上首位计算机和数学最高奖“双料王”诞生</a>
+    | 
+    <!-- 2024.04.12 --> 
+    <a href="https://mp.weixin.qq.com/s/lTVXiTlsbmT878qfJZHV9g" target="_blank">今日arXiv最热大模型论文：清华大学发布，结合稳定扩散模型与ControlNet的AI辅助建筑设计方法</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/IxNls2pU_IzV--hsxBBFdg" target="_blank">一款超强悍、免费文档识别AI工具，开启内测！论文/PPT/书籍/财报等各种文档都能识别解析</a>
+    | 
+    <!-- 2024.04.13 -->     
+    <a href="https://mp.weixin.qq.com/s/xPUJ9wupRI9x879EMJFY0g" target="_blank">今日arXiv最热大模型论文：清华大学发布，ChatGML又添新功能，集成“自我批评”，提升数学能力</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/xPUJ9wupRI9x879EMJFY0g" target="_blank">Sam Altman新动向！被曝公开撬金主微软的客户！</a>
+    | 
+    <!-- 2024.04.15 -->     
+    <a href="https://mp.weixin.qq.com/s/oqzarY7f6YTXyGdWz_W5Vg" target="_blank">斯坦福发文：AI写论文比例激增，CS专业是重灾区，现状堪忧！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/J8CtIfLZZU0XSiO8xj7bJw" target="_blank">今日arXiv最热NLP大模型论文：北京大学&快手发布统一的图文视频生成大模型Video-LaVIT </a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/VLdhQZR6PtxVuzfYeH9dbQ" target="_blank">直接扩展到无限长，谷歌Infini-Transformer终结上下文长度之争</a>
+    | 
+
+
 </br>
 </br>
 AI论文: 
