--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -218,6 +218,8 @@
 <!-- software engineering - A-->
    <a href="https://conf.researchr.org/home/icse-2025" target="_blank">ICSE</a>
     |
+   <a href="https://conf.researchr.org/home/fse-2025" target="_blank">FSE</a>
+    |
 <!-- visualization - A-->
     <a href="" target="_blank">CHI</a>
     |
@@ -508,13 +510,15 @@
     |
     <a href="http://cips-cl.org/static/CCL2024/index.html" target="_blank">CCL</a>
     |
-    <a href="" target="_blank">CCKS</a>
+    <a href="https://sigkg.cn/ccks-ijckg2024/" target="_blank">CCKS</a>
     |
-    <a href="" target="_blank">CCIR</a>
+    <a href="https://www.cips-ir.org.cn/CCIR2024/" target="_blank">CCIR</a>
+    |
+    <a href="https://www.htu.edu.cn/cs/2023/1128/c1007a292047/page.htm" target="_blank">SMP</a>
     |
     <a href="http://wasa-conference.org/WASA2024/index.html" target="_blank">WASA</a>
     |
-    <a href="" target="_blank">ICWSM</a>
+    <a href="https://www.icwsm.org/2024/" target="_blank">ICWSM</a>
     |
 <!-- Multimedia Learning -->
     <a href="https://mmasia2024.org/index.html" target="_blank">ACM Multimedia Asia</a>
@@ -3217,8 +3221,33 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/VLdhQZR6PtxVuzfYeH9dbQ" target="_blank">直接扩展到无限长，谷歌Infini-Transformer终结上下文长度之争</a>
     | 
-
-
+    <!-- 2024.04.16 -->     
+    <a href="https://mp.weixin.qq.com/s/c_7iX_GUbP60UW0aoFuwyw" target="_blank">李飞飞团队发布《2024年人工智能指数报告》，预测人工智能未来发展趋势</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/QsRWCs8V4Y_jQjYGqVdgyw" target="_blank">今日arXiv最热NLP大模型论文：一文读懂大模型的prompt技术</a>
+    | 
+    <!-- 2024.04.17 -->     
+    <a href="https://mp.weixin.qq.com/s/wXZRL5AzPy68LcliugarWQ" target="_blank">H800竟然能白嫖了！还能一键部署Open Sora，潞晨云YYDS！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lkv0YM9r-oWeQOpxSDDZjA" target="_blank">今日arXiv最热NLP大模型论文：斯坦福发布法律指令数据集LawInstruct，统一17个辖区24种语言</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/rsM4jtt_RdELxanobceqkQ" target="_blank">离世界模型更近一步！Meta开源OpenEQA，评估AI Agent情景理解能力</a>
+    |
+    <!-- 2024.04.18 -->     
+    <a href="https://mp.weixin.qq.com/s/0PmivxUXBwarKvUrAO_Uag" target="_blank">Stable Diffusion 3 API 发布！超越Midjourney v6和DALL-E 3</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/s-prTajnQzMTt1NFEM0gWg" target="_blank">波士顿动力抛弃液压机器人Atlas，推出全新电动化机器人，动作超灵活</a>
+    | 
+    <!-- 2024.04.19 -->     
+    <a href="https://mp.weixin.qq.com/s/0bHnV1g3z7_CJG_6deOyuQ" target="_blank">最强开源大模型 Llama 3震撼发布！开源模型将追上GPT-4，4000亿参数模型也在路上</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ViM1tgbOY8kiqGwASw2rPA" target="_blank">微软刚刚发布了VASA-1：单张照片生成超现实真人视频，还没开源但是性能SOTA</a>
+    | 
+    <!-- 2024.04.20 -->     
+    <a href="https://mp.weixin.qq.com/s/T-8WBSsMgpJa3NqN6Kpn4Q" target="_blank">2024 QS排名发布！计算机MIT霸榜，清华11，北大15</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/dMCg8RlPuUE_Cs4fvjTbjQ" target="_blank">今日arXiv最热NLP大模型论文：面向不确定性感知的Language Agent</a>
+    | 
 </br>
 </br>
 AI论文: 
