--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -321,6 +321,9 @@
     |
     <a href="" target="_blank">ICWE</a>
     |
+<!-- IR - C-->
+    <a href="https://ecir2025.eu/" target="_blank">ECIR</a>
+    |
 <!-- information system - C-->
     <a href="" target="_blank">WISE</a>
     |
@@ -535,6 +538,8 @@
     <a href="" target="_blank">ChineseCSCW</a>
     |
     <a href="" target="_blank">AKBC</a>
+    |
+    <a href="https://conf.ccf.org.cn/web/api/m1216704987858604032171012667439.action" target="_blank">WISA</a>
     |
     <a href="https://ickg.zhonghuapu.com/" target="_blank">ICKG</a>
     | 
@@ -3247,7 +3252,22 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/T-8WBSsMgpJa3NqN6Kpn4Q" target="_blank">2024 QS排名发布！计算机MIT霸榜，清华11，北大15</a>
     | 
     <a href="https://mp.weixin.qq.com/s/dMCg8RlPuUE_Cs4fvjTbjQ" target="_blank">今日arXiv最热NLP大模型论文：面向不确定性感知的Language Agent</a>
+    |
+    <!-- 2024.04.21 -->     
+    <a href="https://mp.weixin.qq.com/s/rtFuez6SMThuT5eDDS_U7A" target="_blank">研究了两年后，我发现领域的开山之作是瞎编的</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/Jt0vGDPmRwhggQouBJnK1Q" target="_blank">AI安全之问：我们的智能助手真的安全吗？</a>
+    | 
+    <a href="https://m" target="_blank">今日arXiv最热NLP大模型论文：微软发布可视思维链VoT，提高大模型空间想象力</a>
+    | 
+    <!-- 2024.04.22 -->     
+    <a href="https://mp.weixin.qq.com/s/4JA-03w5kbs1IUYQ6xMqfg" target="_blank">2024，人形机器人爆发元年？从难点和时机出发聊聊可能性</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/e-RsPlaEdeJHgwNa_vFobQ" target="_blank">今日arXiv最热NLP大模型论文：浙江大学：蒸一蒸，多Agent变成单一模型，效果更好</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/LDuEBMsl_q57xZ3MQ7kCGA" target="_blank">超越OpenAI，谷歌重磅发布从大模型蒸馏的编码器Gecko</a>
+    |      
+    
 </br>
 </br>
 AI论文: 
