--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -283,6 +283,9 @@
     |
     <a href="" target="_blank">CAiSE</a>
     |
+<!-- Acoustics, Speech and Signal Processing - B-->
+    <a href="https://2025.ieeeicassp.org/" target="_blank">ICASSP</a>
+    |
 <!-- bigdata - C-->  
     <a href="" target="_blank">IEEE BigData</a>
     |
@@ -3266,8 +3269,33 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/e-RsPlaEdeJHgwNa_vFobQ" target="_blank">今日arXiv最热NLP大模型论文：浙江大学：蒸一蒸，多Agent变成单一模型，效果更好</a>
     |
     <a href="https://mp.weixin.qq.com/s/LDuEBMsl_q57xZ3MQ7kCGA" target="_blank">超越OpenAI，谷歌重磅发布从大模型蒸馏的编码器Gecko</a>
+    |
+    <!-- 2024.04.23 -->     
+    <a href="https://mp.weixin.qq.com/s/BZF03FgwqWN7DMjYjuCssg" target="_blank">Linux之父讽刺AI炒作：很搞笑，大概我也会被大模型取代</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/oG0BrBudgxO8SgI4i4fk6w" target="_blank">Llama 3 上线4天，井喷1000多个变种！中文版也有了！Groq上推理速度800token每秒</a>
+    |
+    <!-- 2024.04.24 -->     
+    <a href="https://mp.weixin.qq.com/s/Idwd7IRX5Ah1araDUdhoYQ" target="_blank">国产AI搜索的黑马！没有广告，免费使用，科研狗：学术搜索太香了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zcq-4uFg2gnYtOc395WgHQ" target="_blank">2024 IEEE荣誉奖章揭晓！互联网之父，TCP/IP协议发明者Robert E. Kahn获奖</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cRGfYsSQqRwiDSVnDma8og" target="_blank">微软来大招：手机部署堪比GPT3.5高性能大模型！</a>
+    |  
+    <!-- 2024.04.25 -->     
+    <a href="https://mp.weixin.qq.com/s/BukV7fSbe4aSChki18YGDA" target="_blank">苹果推出开放语言模型 OpenELM；微软、清华团队提出多头混合专家 MH-MoE｜大模型论文</a>
     |      
-    
+    <a href="https://mp.weixin.qq.com/s/kpPioTcBx3ec1WfcSTmTjA" target="_blank">Open-Sora 全面开源升级：支持单镜头16s视频生成和720p分辨率</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hP7C22F7AhJ0HFRPmGk2gA" target="_blank">微软发布！提示工程进化为位置工程，有效提升RAG与上下文学习</a>
+    |
+    <!-- 2024.04.26 -->     
+    <a href="https://mp.weixin.qq.com/s/3wq7h0yc1t6GodfdUUIqHg" target="_blank">网传Llama 3比肩GPT-4？别闹了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/qALVhq5HMwxrpgQfPAB2SQ" target="_blank">老黄将世界上第一台英伟达H200亲手交付给OpenAI</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XA1OPnuROX0cAL54EBn_OA" target="_blank">今日arXiv最热大模型论文：大模型也来看球，还能判断是否犯规</a>
+    |
 </br>
 </br>
 AI论文: 
