--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -544,7 +544,7 @@
     |
     <a href="https://conf.ccf.org.cn/web/api/m1216704987858604032171012667439.action" target="_blank">WISA</a>
     |
-    <a href="https://ickg.zhonghuapu.com/" target="_blank">ICKG</a>
+    <a href="http://ickg2024.openkg.cn/" target="_blank">ICKG</a>
     | 
     <a href="https://www.asianlp.sg/conferences/ialp2024/web/" target="_blank">IALP</a>
     | 
@@ -3295,6 +3295,25 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/qALVhq5HMwxrpgQfPAB2SQ" target="_blank">老黄将世界上第一台英伟达H200亲手交付给OpenAI</a>
     |
     <a href="https://mp.weixin.qq.com/s/XA1OPnuROX0cAL54EBn_OA" target="_blank">今日arXiv最热大模型论文：大模型也来看球，还能判断是否犯规</a>
+    |
+    <!-- 2024.04.27 -->     
+    <a href="https://mp.weixin.qq.com/s/-KYwtNGTBJY9U_gJ_FTZKA" target="_blank">拜登召集奥特曼和李飞飞等入AI安全委员会，没带马斯克！库克考虑将iPhone AI服务委托给OpenAI</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/VtdEQsMgo-oZsBVz5Vbi3A" target="_blank">北大发现了一种特殊类型的注意力头！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/d3Y883NQLmdOi4-AA0JOtA" target="_blank">今日arXiv最热NLP大模型论文：CMU最新综述：工具使用，大模型的神兵利器</a>
+    |
+    <!-- 2024.04.28 -->     
+    <a href="https://mp.weixin.qq.com/s/MFLlLKd3K1owL_z6ZzSI9Q" target="_blank">谷歌员工爆料Python基础团队原地解散</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zPISd1apeChwZ-W49C0LQg" target="_blank">清华军团推出中国首个对标Sora的视频大模型Vidu，扒一扒它背后的模型架构</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/FCD3qP6zYyqseWLAvaBu_g" target="_blank">今日arXiv最热NLP大模型论文：韩国团队提出ResearchAgent系统，模仿人类产出论文idea</a>
+    |
+    <!-- 2024.04.29 -->     
+    <a href="https://mp.weixin.qq.com/s/xrEQtCilAk6iNWdaWclDew" target="_blank">奥特曼斯坦福演讲全场爆满！GPT-5强到发指，Scaling Law依然有效</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eoZmV9VqhdmfOWnnZeR5Vg" target="_blank">今日arXiv最热NLP大模型论文：超越GPT-4，清华发布网页导航智能体AutoWebGLM</a>
     |
 </br>
 </br>
