--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3315,6 +3315,21 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/eoZmV9VqhdmfOWnnZeR5Vg" target="_blank">今日arXiv最热NLP大模型论文：超越GPT-4，清华发布网页导航智能体AutoWebGLM</a>
     |
+    <!-- 2024.04.30 -->     
+    <a href="https://mp.weixin.qq.com/s/zwigN1hXa6SeXCdLjXwwYQ" target="_blank">神秘模型gpt2-chatbot实力被赞超越GPT-4：sam亲自确认，或是OpenAI全新模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0s6Z3VdWkOEzOn3Hg7T0qg" target="_blank">特斯拉和百度地图独家深度定制车道级高辅地图曝光， FSD 或很快落地中国</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ZdZy6IkLsaft4CIfO6M_Og" target="_blank">今日arXiv最热大模型论文：复旦提出基于diffusion的虚拟试衣模型，模特一键换装</a>
+    | 
+    <!-- 2024.05.01 -->     
+    <a href="https://mp.weixin.qq.com/s/qw1JvXAxO3uW53M8gtHRmg" target="_blank">今日arXiv最热联邦学习论文：通信成本降低94%，中科院计算所发布个性化联邦学习方法</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/1A_g7yvR2UB5iNJLGTT0qg" target="_blank">比Llama 3 推理更强的开源大模型出现了! Leetcode击败80%人类</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/TEJJ83E49YPNkIZwmVaDDA" target="_blank">Sora爆红视频幕后：被骗了，用了成吨的后期才有这效果</a>
+    |    
+    
 </br>
 </br>
 AI论文: 
