--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -532,7 +532,7 @@
     <a href="https://chinamm.csig.org.cn/2024/index.html" target="_blank">ChinaMM</a>
     |
 <!-- software engineering - others -->
-    <a href="" target="_blank">ChinaSoft</a>
+    <a href="https://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
     <a href="" target="_blank">ChinaService</a>
     |
@@ -3329,7 +3329,9 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/TEJJ83E49YPNkIZwmVaDDA" target="_blank">Sora爆红视频幕后：被骗了，用了成吨的后期才有这效果</a>
     |    
-    
+    <!-- 2024.05.04 -->     
+    <a href="https://mp.weixin.qq.com/s/RPhN_TR3lW990epLE7izmA" target="_blank">AI教母李飞飞首次创业！成立“空间智能”公司，已完成种子轮</a>
+    |    
 </br>
 </br>
 AI论文: 
