--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -254,6 +254,8 @@
     |
     <a href="" target="_blank">CIKM</a>
     |
+    <a href="https://www.wsdm-conference.org/2025/" target="_blank">WSDM</a>
+    |
     <a href="https://www.ecai2024.eu/" target="_blank">ECAI</a>
     |
 <!-- social Computing - B-->
@@ -3331,7 +3333,87 @@ ChatGPT:
     |    
     <!-- 2024.05.04 -->     
     <a href="https://mp.weixin.qq.com/s/RPhN_TR3lW990epLE7izmA" target="_blank">AI教母李飞飞首次创业！成立“空间智能”公司，已完成种子轮</a>
-    |    
+    |
+    <!-- 2024.05.06 -->     
+    <a href="https://mp.weixin.qq.com/s/6Y_eFZgBGyIicdgs2zx0FA" target="_blank">上海AI Lab开源首个可替代GPT-4V的多模态大模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/JMc2XLeoBJZ6oByp-usRCQ" target="_blank">MLP一夜被干掉，全新神经网络架构KAN破纪录！MIT华人一作，轻松复现Nature封面AI数学研究</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PBRfaD3d1PoQG2zt9vBn9g" target="_blank">今日arXiv最热大模型论文：首个面向AI的python编程框架，提升大模型编程能力新思路</a>
+    |
+    <!-- 2024.05.07 -->     
+    <a href="https://mp.weixin.qq.com/s/NJRQU0bhzAFxl5bO8h5MCQ" target="_blank">今日arXiv最热NLP大模型论文：GPT-4理解武林外传中的含蓄表述，达人类水平</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/rF2shS1Ke9XMUryFK2jgoA" target="_blank">OpenAI的搜索引擎要来了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/pTX1APLrH5ZHogcoqCmKBA" target="_blank">大模型+智能眼镜，让失明人士也能无障碍阅读</a>
+    |
+    <!-- 2024.05.08 -->     
+    <a href="https://mp.weixin.qq.com/s/mZLawbPU30h1oWvaSQ70Zg" target="_blank">ICLR 2024 杰出论文奖揭晓！两篇国内论文获荣誉提名</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0d64jCiuzLUMnSqgSW652w" target="_blank">今日arXiv最热NLP大模型论文：对指令太敏感？山东大学提出一致性对齐法，治好大模型敏感体质！</a>
+    |
+    <!-- 2024.05.09 -->     
+    <a href="https://mp.weixin.qq.com/s/JnXU8wuyGyWgf7jjMtnFuw" target="_blank">HuggingFace烧钱做了一大批实验，揭示多模态大模型哪些trick真正有效</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XcRLIQ5KBtz0bvs39BN74Q" target="_blank">以ACL 2024为例，从投稿到接收：顶会投稿后全流程揭秘</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ptJSDjM80uCZ4hewcyQs9g" target="_blank">今日arXiv最热大模型论文：浙江大学：如何减轻视觉大模型中的幻觉问题</a>
+    |
+    <!-- 2024.05.10 -->     
+    <a href="https://mp.weixin.qq.com/s/FRA-NvgFG3LfbzQZQDg-lQ" target="_blank">Neuralink首个脑机接口患者：打游戏、搞研究两不误，重获自主能力</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-1zkqjnlFA_6c8mjMPX62w" target="_blank">今日arXiv最热NLP大模型论文：NAACL24实锤语言学对大模型“负优化”，抽象语义表示+思维链有损表现</a>
+    |
+    <!-- 2024.05.11 -->     
+    <a href="https://mp.weixin.qq.com/s/U53JtPQSpxQvHLJ7VLfWxA" target="_blank">30%参数达到92%的表现，大模型稀疏化方法显神通</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/07mqb9F024MsF04xkgQmPQ?poc_token=HNYaSGajlu6wctDz8XUW4ROd0H41P0ImnF46fRHT" target="_blank">两重惊喜！奥特曼预告GPT-4和ChatGPT重大更新，Open AI要放大招</a>
+    |
+    <!-- 2024.05.12 -->     
+    <a href="https://mp.weixin.qq.com/s/7MTELAEO8sdgI9eekTTT0w" target="_blank">真要这么卷？某国产大模型定价下调90%，百万 tokens 只需 1 元！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ltDj7mU9FezvkdokUzPxmA" target="_blank">清华发布Temporal Scaling Law，解释时间尺度对大模型表现的影响</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/dX8X_VjFnAIBOCAIHvxEbg" target="_blank">今日arXiv最热NLP大模型论文：揭露大语言模型短板，北京大学提出事件推理测试基准</a>
+    |
+    <!-- 2024.05.13 -->     
+    <a href="https://mp.weixin.qq.com/s/srLx0nwIQHJbsrvfq5SdwA" target="_blank">百万级ChatGPT对话曝光！AI竟然经常被"调戏"？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ndaXbtSNpuF645tFTddP6Q" target="_blank">从零开始手搓GPU，照着英伟达CUDA来，只用两个星期</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Ter_ekb_GSX2wcXRtBCenA" target="_blank">今日arXiv最热CV大模型论文：国产开源视觉大模型InternVL 1.5发布，赶超GPT-4V水准</a>
+    |
+    <!-- 2024.05.14 -->     
+    <a href="https://mp.weixin.qq.com/s/yuD-7RFdiIshZsRwz85gCA" target="_blank">OpenAI爆炸更新：GPT-4免费了！新模型GPT-4o发布，视觉、语音能力大幅增强，速度起飞，API打骨折</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zgXCo1P-zltQIH9OoTfkrA" target="_blank">今日arXiv最热大模型论文：减少语法错误，竟成了突破口！识别AI生成文本，AUROC达98.7%</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NI4juWbm9jOjhK2hCM8KQA" target="_blank">牛皮吹破？大模型长输入能力不能拿来做上下文学习</a>
+    |
+    <!-- 2024.05.15 -->     
+    <a href="https://mp.weixin.qq.com/s/pkAcMpxOGoHqiZ7MHaVpaA" target="_blank">终于！OpenAI首席科学家 Ilya 离职</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_LQ1S6COHOCD3Eq1axH-dw" target="_blank">谷歌这次又“杀疯了”！200万token长文本能力问鼎全球最强，一场大会，AI被提了120次</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2jcCJyBPu3osEMuFrWOGig" target="_blank">今日arXiv最热NLP大模型论文：又到美国大选年，南加大教你如何用ChatGPT影响竞选</a>
+    | 
+    <!-- 2024.05.16 -->     
+    <a href="https://mp.weixin.qq.com/s/YlYGXEFRIrVbs2yyT5lZZg" target="_blank">GPT-4o炸裂玩法大赏！选股效率爆炸、创造新物种、暴打广告设计、金牌作业辅导...</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/mwQ1QOtLUJsfSwmGCpH08Q" target="_blank">今日arXiv最热NLP大模型论文：清华大学：大语言模型的常见词僻意理解能力竟不如中学生</a>
+    | 
+    <!-- 2024.05.17 -->     
+    <a href="https://mp.weixin.qq.com/s/tFsNWWY0yCg225ziOOjGPA" target="_blank">“AI届汪峰”谷歌的Astra是强势反击GPT-4o，还是又被抢了风头？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_swf4LdMycaG5kl-RLbQ4Q" target="_blank">今日arXiv最热大模型论文：北大发布4维时空数据预训练，助力自动驾驶</a>
+    |   
+    <!-- 2024.05.18 -->     
+    <a href="https://mp.weixin.qq.com/s/9-FPj_EIFj418aHkiLIEKA" target="_blank">突发！OpenAI超级对齐团队老大自曝离职原因！牵出管理内幕</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/dGTKoBzJRhrdSVMfTxYz5g" target="_blank">今日arXiv最热大模型论文：图灵测试中，GPT-4仍不及人类！</a>
+    |
+    
 </br>
 </br>
 AI论文: 
@@ -4908,6 +4990,8 @@ NLP/KG Field：
     <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/" target="_blank">Jiaoyan Chen</a>
     |
     <a href="https://warwick.ac.uk/fac/sci/dcs/people/weiren_yu/" target="_blank">Weiren Yu</a>
+    |
+    <a href="https://fengyue-leah.github.io/index.html" target="_blank">Yue Feng</a>
     |
 <!-- Canada -->
     <a href="http://www-labs.iro.umontreal.ca/~liubang/" target="_blank">Bang Liu</a> 
