--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3413,7 +3413,18 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/dGTKoBzJRhrdSVMfTxYz5g" target="_blank">今日arXiv最热大模型论文：图灵测试中，GPT-4仍不及人类！</a>
     |
-    
+    <!-- 2024.05.20 -->     
+    <a href="https://mp.weixin.qq.com/s/jitFy1odxJIPV0QEB3WqYg" target="_blank">爆打多模态王者 GPT-4V、Gemini Pro！这个小小端侧模型杀疯了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3C4OuqPLUp7_psReAMhIOQ" target="_blank">今日arXiv最热大模型论文：Agent也疯狂！FoA方法对智能体做树结构搜索，超越ToT</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_dP1IQbkEPxhhiVFe5C2UQ" target="_blank">AI一键"搬空"你未来的新家，买房装修变得简单了？</a>
+    |
+    <!-- 2024.05.21 -->     
+    <a href="https://mp.weixin.qq.com/s/c3wnLUMgZ0EHDh-ObH1iDQ" target="_blank">国产黑马大模型盲测竞技场挺进全球前十！中文榜和GPT-4o并列第一</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/MVQg0z9ZMfGLFXzFYP4-vA" target="_blank">Mac不香啦？微软发布第一款GPT-4o加持的Windows</a>
+    |
 </br>
 </br>
 AI论文: 
