--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -572,7 +572,12 @@
     | 
     <a href="https://mp.weixin.qq.com/s/jv4D3ck2ccPqGqLhDRyRsA" target="_blank">中国科学院计算所网络数据重点实验室4篇论文获LREC-COLING 2024录用</a>
     |
-     
+    <a href="https://mp.weixin.qq.com/s/DUOWKC_YDAdygjzdLxVMVA" target="_blank">快讯｜北邮GAMMA LAB的两篇工作被ICML 2024 录用</a>
+    |      
+    <a href="https://mp.weixin.qq.com/s/bBuQsROttWyqMZA4bk8Yig" target="_blank">快讯｜北邮GAMMA LAB的两篇工作被KDD 2024 录用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ThawLEkVGzun1gAIEd2yyw" target="_blank">新闻 | 我组八篇论文被 ICML 2024 录用</a>
+    |     
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -3425,6 +3430,30 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/MVQg0z9ZMfGLFXzFYP4-vA" target="_blank">Mac不香啦？微软发布第一款GPT-4o加持的Windows</a>
     |
+    <!-- 2024.05.23 -->     
+    <a href="https://mp.weixin.qq.com/s/LSE09UQeoZxrrgn7hFv89w" target="_blank">OpenAI宫斗剧番外篇: “Ilya与Altman联手对抗微软大帝，扫除黑恶势力”，“余华”和“莫言”犀利点评</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/wJYFpY2ErQuMeT05d8_2Sw" target="_blank">微软开发者大会，Copilot Agents发布，掀起新一轮生产力革命！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Zl2UUFVvfs0wkMjG6lFokQ" target="_blank">今日arXiv最热大模型论文：AI"参审"，论文评审迎来"神助攻"？</a>
+    |
+    <!-- 2024.05.24 -->     
+    <a href="https:xx" target="_blank">ICML2024高分论文！大模型计算效率暴涨至200%，来自中国AI公司</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/mVevNuhP6fZtODwaBDZYiA" target="_blank">今日arXiv最热大模型论文：LoRA又有新用途，学得少忘得也少，成持续学习关键！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/1SmShJnpZ4870BZ7Uvfc9A" target="_blank">大语言模型的创意"魔法"：召唤隐藏的联想思维</a>
+    |
+    <!-- 2024.05.25 -->     
+    <a href="https://mp.weixin.qq.com/s/Y6WeiimYpDZ3AF_n-YRWNw" target="_blank">李飞飞亲自撰文：大模型不存在主观感觉能力，多少亿参数都不行</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/OFTFzou9VmYVY8J9icpyig" target="_blank">AI多模态「六边形战士」，原创音乐、1分钟百页PPT、抖音爆款……</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ufzGBqOX9GAqTZhNsc0Q0w" target="_blank">推特热帖：大语言模型自荐能够替代的20种人类工作！快来看你是否需要转行！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/5hxleiSLaaijgbO6dmeK4A" target="_blank">今日arXiv最热大模型论文：忘记"也是一门学问：机器如何忘记自己学到的知识？</a>
+    |
+
 </br>
 </br>
 AI论文: 
@@ -5149,6 +5178,14 @@ NLP/KG Field：
     |
   <br />
   <br />
+  <br />
+Quantum AI Field：
+<br />
+    <a href="https://www.quair.group/author/xin-wang/" target="_blank">Xin Wang [<a href="https://www.quair.group/" target="_blank">Quantum AI Lab</a>]</a> 
+    |
+  <br />
+  <br />
+
 Temporal KG Representation Learning Field：
 <br />
     <a href="http://jsjytx.neuq.edu.cn/info/1037/1685.htm" target="_blank">Luyi Bai</a>
