--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -235,7 +235,7 @@
     |
     <a href="" target="_blank">LREC-COLING</a>
     |
-    <a href="" target="_blank">ECML-PKDD</a>
+    <a href="https://ecmlpkdd.org/2025/" target="_blank">ECML-PKDD</a>
     |
     <a href="" target="_blank">ICME</a>
     |
@@ -543,6 +543,8 @@
     <a href="" target="_blank">ChineseCSCW</a>
     |
     <a href="" target="_blank">AKBC</a>
+    |
+    <a href="http://www.ieee-hust-ncc.org/2024/DIKW/index.html" target="_blank">DIKW</a>
     |
     <a href="https://conf.ccf.org.cn/web/api/m1216704987858604032171012667439.action" target="_blank">WISA</a>
     |
@@ -3453,6 +3455,104 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/5hxleiSLaaijgbO6dmeK4A" target="_blank">今日arXiv最热大模型论文：忘记"也是一门学问：机器如何忘记自己学到的知识？</a>
     |
+    <!-- 2024.05.26 -->     
+    <a href="https://mp.weixin.qq.com/s/6UppT89MzaByU7Kukc4pGw" target="_blank">ChemLLM化学大模型开源，wisemodel社区在线体验，助力化学研究</a>
+    |
+    <!-- 2024.05.27 -->     
+    <a href="https://mp.weixin.qq.com/s/9-YBPbHChhYbnTvUZrkLAg" target="_blank">重磅！美国众议院新议案：限制中国人在美国从事AI/ML职业</a>
+    |
+    <a href="https://" target="_blank">今日arXiv最热大模型论文：上海AI lab发布MathBench，GPT-4o的数学能力有多强？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/S05HwSetTlb3AYOgnTBraA" target="_blank">今日arXiv最热大模型论文：上海AI lab发布MathBench，GPT-4o的数学能力有多强？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Gmy3A3YWJKROj0Tggo2xdQ" target="_blank">上交提出TrustGAIN，提出6G网络中可信AIGC新模式！</a>
+    |
+    <!-- 2024.05.28 -->     
+    <a href="https://m" target="_blank">我手握多篇顶会一作，引用量几百，却连个像样的博士offer都申请不到</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/E50Z_gomCYQQXbXUB15Yvw" target="_blank">马斯克xAI融资60亿美元，宣布打造世界第一超算中心，10万张H100GPU</a>
+    |
+    <!-- 2024.05.29 -->     
+    <a href="https://mp.weixin.qq.com/s/DfBd3C1Of-TkKEhV5tvpOQ" target="_blank">今日arXiv最热NLP大模型论文：清华大学提出IFT对齐算法，打破SFT与RLHF局限性</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/25bq-E-2iqx--6x64A2EoA" target="_blank">西湖大学提出AIGC检测框架，精准识别AI撰写的文稿</a>
+    |
+    <!-- 2024.05.30 -->     
+    <a href="https://mp.weixin.qq.com/s/HXspr9pFNRxPwX1JnkKLTg" target="_blank">终于，GPT-4o向所有人免费开放！评论区却“骂声一片”</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xBH8Hle0-t5O561Q9UDZdw" target="_blank">清华研究再登Nature！重磅发布世界首个类脑互补视觉芯片</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/iewr5pfd_663U7L_-8ap6Q" target="_blank">长短时记忆RAG来啦，仿照人脑结构，成本降低20倍，表现提高20%！</a>
+    |
+    <!-- 2024.05.31 -->     
+    <a href="https://mp.weixin.qq.com/s/oXdj09kRJ3pFwJ0Qpi72_g" target="_blank"> 今日arXiv最热大模型论文：13位作者，200篇文献，腾讯最新综述高效多模态大模型：性能要强，规模要小</a>
+    |
+    <!-- 2024.05.30 -->     
+    <a href="https://mp.weixin.qq.com/s/xBH8Hle0-t5O561Q9UDZdw" target="_blank">清华研究再登Nature！重磅发布世界首个类脑互补视觉芯片</a>
+    |
+    <a href="https://m" target="_blank">ChemLL</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/HoyeS7NSOsKnMXKGr1jrSA" target="_blank">告别人工！智谱AI新神器将数据标注成本卷到接近0</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/w4lgx6EojEk1OoJ29AYCtA" target="_blank">高效训练超越LoRA，北航发布MoRA</a>
+    |
+    <!-- 2024.06.01 -->     
+    <a href="https://mp.weixin.qq.com/s/y9Opp0dxrAQ4Ghi8LwmuAA" target="_blank">GPT-4o遭破解！大神搞出越狱版本，OpenAI紧急封杀，安全小组被打脸</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0By4E0pI3PdWM1asvA83wg" target="_blank">Anthropic公司CEO谈AI发展：Cluade安全超过商业利益</a>
+    |
+    <a href="https://m" target="_blank">ChemLL</a>
+    |
+    <!-- 2024.06.03 -->     
+    <a href="https://mp.weixin.qq.com/s/hvHMKopEDAkhk5eyZe-DXg" target="_blank">抄袭瓜！斯坦福作者已删库跑路！面壁和刘知远老师的最新回应</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/aQ_M24neQsTjk4cO3gfqRg" target="_blank">老黄自己卷自己！GPU要一年更新一代！预告新动作：AI工厂将吞噬一切</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/CiDP6wrN-4E-NAJO4m5Ilg" target="_blank">今日arXiv最热大模型论文：人民大学：下一轮先裁HR！基于大模型的面试官与人岗匹配</a>
+    |
+    <!-- 2024.06.04 -->
+    <a href="https://mp.weixin.qq.com/s/zJBMndOorf_UoO_PAqTVcA" target="_blank">AMD提前发布新AI芯片，硬刚英伟达！Zen 5架构性能提高一倍</a>
+    |        
+    <a href="https://mp.weixin.qq.com/s/zsXRMiaQ0E2yiBbC930Mxw" target="_blank">夕小瑶：资本寒冬下的AI创业一年</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/clkZY3eG-T4O8MtZsSZkXw" target="_blank">奥特曼个人投资引纠纷，手持400多家公司28亿美元，部分投资与OpenAI有利益冲突！</a>
+    |
+    <!-- 2024.06.05 -->
+    <a href="https://mp.weixin.qq.com/s/zJBMndOorf_UoO_PAqTVcA" target="_blank">AI教父背书，OpenAI与谷歌员工联合签署公开信，呼吁公司重视AI安全</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ITSDWHCvnAY7XHUCODzbxw" target="_blank">杀疯了！全面超越Llama3的强悍开源模型，仅9B，1000k上下文；GPT-4级别模型1年降价1万倍</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/QuqNbxgxT6wEm5FQS22Qig" target="_blank">英雄联盟AI游戏伴侣来啦！实时提供对线策略，网红游戏主播陪练</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/m8hERQnMbXiyKahW3d20Yg" target="_blank">2025 QS 世界大学排名公布，北大清华跻身全球前20</a>
+    | 
+    <!-- 2024.06.06 -->  
+    <a href="https://mp.weixin.qq.com/s/YnHORCHWF93_CprfFNDelQ" target="_blank">GPT、Claude、Perplexity等AI集体宕机罢工，全球打工人崩溃了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ELwGlcX0NFiz1YDjS3S1uA" target="_blank">今日arXiv最热大模型论文：大模型都能怎么用？中南大学最新综述：大模型时代的自然语言处理</a>
+    |  
+    <!-- 2024.06.07 -->  
+    <a href="https://mp.weixin.qq.com/s/YnHORCHWF93_CprfFNDelQ" target="_blank">GPT、Claude、Perplexity等AI集体宕机罢工，全球打工人崩溃了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/6Cb6HEZV2pguOZczJl-Qcg" target="_blank">载入史册！马斯克第四次星际飞船试飞成功，首次实现海上软着陆！</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/3tbkPzWLatqGxZh0qYiFUQ" target="_blank">中山大学和字节发布「视频虚拟试穿」扩散模型VITON-DiT，一键生成换装后视频！</a>
+    | 
+    <!-- 2024.06.08 -->  
+    <a href="https://mp.weixin.qq.com/s/sIhuthR_4O3Ck8u9ucfLpw" target="_blank">GPT-4o仅排第二！北大港大等6所高校联手，发布权威多模态大模型榜单！</a>
+    |      
+    <!-- 2024.06.10 -->  
+    <a href="https://mp.weixin.qq.com/s/UKNV9yQWB6d102IX8IhG9w" target="_blank">“我，在阿里月薪6万，端午离职后突然惊醒：人越努力，只会越平庸”</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xOOsxU1MtdyHwcLG-jUI4Q" target="_blank">OpenAI与核聚变公司寻求合作，白宫拨款1.8亿美元用于核聚变商业化研究</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/B4iQA5fi1h_3beI5t64nJA" target="_blank">4000亿薪酬被驳回！马斯克再次讨薪</a>
+    |
+    <!-- 2024.06.11 -->
+    <a href="https://mp.weixin.qq.com/s/DSDGnDVO41jRjad2cusaQg" target="_blank">马斯克怒了，禁止员工使用苹果设备，抨击库克出卖数据给OpenAI</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/0VKAkPo4fDpJNn-6jDiYhg" target="_blank">一夜之间，苹果杀死无数AI工具创业公司！GPT-4o深度整合进苹果</a>
+    | 
 
 </br>
 </br>
