--- a/pages/activities.html
+++ b/pages/activities.html
@@ -66,10 +66,14 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
-    <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, xx xx-xx, 2024</li>
+    <li><strong>PC member</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd-6th, 2024</li>
+
+
+    <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks-ijckg2024/"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, September 19th-22nd, 2024</li>
 
     
-    <li><strong>Invited Reviewer</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
+    <li><strong>PC member</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
+
 
     <li><strong>PC member</strong>, The 33rd International Joint  Conference on Artificial Intelligence (<a href="https://ijcai24.org/"><strong><u><font color="#874e26">IJCAI 2024</font></u></strong></a>), Jeju Island, South Korea, August 3rd-9th, 2024</li>
 
@@ -133,6 +137,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd to 6th, 2024</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
 
 
