--- a/pages/activities.html
+++ b/pages/activities.html
@@ -81,7 +81,7 @@
     <li><strong>PC member</strong>, 2024 SIAM International Conference on Data Mining (<a href="https://www.siam.org/conferences/cm/conference/sdm24"><strong><u><font color="#874e26">SDM 2024</font></u></strong></a>), Westin Houston, TX, U.S., April 18-20, 2024</li>
 
     
-    <li><strong>PC member</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org//"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
+    <li><strong>PC member</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org/"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
 
 
     <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
@@ -137,7 +137,7 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
-    <li><strong>Invited Reviewer</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd to 6th, 2024</li>
+    <li><strong>Invited Reviewer</strong>, The 31st International Conference on Neural Information Processing (<a href="https://www.iconip2024.org/"><strong><u><font color="#874e26">ICONIP 2024</font></u></strong></a>), Auckland, New Zealand, December 2nd-6th, 2024</li>
 
 
     <li><strong>Invited Reviewer</strong>, The 8th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="https://apweb2024.zjnu.edu.cn/"><strong><u><font color="#874e26">APWeb-WAIM 2024</font></u></strong></a>), Jinhua, China, August 30-Septemper 1, 2024</li>
@@ -152,7 +152,7 @@
     <li><strong>Invited Reviewer</strong>, 2024 SIAM International Conference on Data Mining (<a href="https://www.siam.org/conferences/cm/conference/sdm24"><strong><u><font color="#874e26">SDM 2024</font></u></strong></a>), Westin Houston, TX, U.S., April 18-20, 2024</li>
 
 
-    <li><strong>Invited Reviewer</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org//"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
+    <li><strong>Invited Reviewer</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org/"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
 
     
     <li><strong>Invited Reviewer</strong>, The 30th International Conference on Neural Information Processing (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP 2023</font></u></strong></a>), Changsha, China, November 20-23, 2022</li>
